force-app/main/default/objects/Product2/fields/Create_Single_Revenue_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Create_Single_Revenue_Schedule__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that only a single revenue schedule record should be created for these products when added to an Opportunity.</description>
    <label>Create Single Revenue Schedule</label>
    <type>Checkbox</type>
</CustomField>