force-app/main/default/objects/Product2/fields/EPI_Code__c.field-meta.xml
<CustomField>
    <fullName>EPI_Code__c</fullName>
    <label>EPI Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>