force-app/main/default/objects/Product2/fields/Exclude_from_Base_Budgets__c.field-meta.xml
<CustomField>
    <fullName>Exclude_from_Base_Budgets__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Exclude from Base Budgets</description>
    <label>Exclude from Base Budgets</label>
    <type>Checkbox</type>
</CustomField>