force-app/main/default/objects/Product2/fields/Exclude_KAM_Budgets__c.field-meta.xml
<CustomField>
    <fullName>Exclude_KAM_Budgets__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude KAM Budgets</label>
    <type>Checkbox</type>
</CustomField>