force-app/main/default/objects/Product2/fields/isTPM__c.field-meta.xml
<CustomField>
    <fullName>isTPM__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicate that this is a TPM Product</description>
    <label>isTPM</label>
    <type>Checkbox</type>
</CustomField>