force-app/main/default/objects/Product2/fields/LOB_Code__c.field-meta.xml
<CustomField>
    <fullName>LOB_Code__c</fullName>
    <description>Line of business code used in Peoplesoft and Beacon</description>
    <label>LOB Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>