force-app/main/default/objects/Product2/fields/Operating_Segment__c.field-meta.xml
<CustomField>
    <fullName>Operating_Segment__c</fullName>
    <label>Operating Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Bulk Products and Services</fullName>
            </value>
            <value>
                <fullName>Chemical Distribution Services</fullName>
            </value>
            <value>
                <fullName>Drill Rig Services</fullName>
            </value>
            <value>
                <fullName>Event Services</fullName>
            </value>
            <value>
                <fullName>Field Services</fullName>
            </value>
            <value>
                <fullName>Healthcare Services</fullName>
            </value>
            <value>
                <fullName>Industrial Services</fullName>
            </value>
            <value>
                <fullName>Infrastructure &amp; Utility Servs</fullName>
            </value>
            <value>
                <fullName>Lodging Services</fullName>
            </value>
            <value>
                <fullName>Maintenance Repair Order</fullName>
            </value>
            <value>
                <fullName>Oil Field Transport/Prod Servs</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Pipelines Services</fullName>
            </value>
            <value>
                <fullName>Refinery Oil &amp; Waste Procsing</fullName>
            </value>
            <value>
                <fullName>Remediation Services</fullName>
            </value>
            <value>
                <fullName>Retail Services</fullName>
            </value>
            <value>
                <fullName>Right of Way Services</fullName>
            </value>
            <value>
                <fullName>Sale of Material</fullName>
            </value>
            <value>
                <fullName>Seismic Services</fullName>
            </value>
            <value>
                <fullName>SK - Environmental</fullName>
            </value>
            <value>
                <fullName>SK - Oil</fullName>
            </value>
            <value>
                <fullName>T&amp;D Services</fullName>
            </value>
            <value>
                <fullName>Transformer Services</fullName>
            </value>
            <value>
                <fullName>Turnaround Services</fullName>
            </value>
            <value>
                <fullName>Used Oil Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>