force-app/main/default/objects/Product2/fields/Product_Hierarchy_Number__c.field-meta.xml
<CustomField>
    <fullName>Product_Hierarchy_Number__c</fullName>
    <label>Product Hierarchy Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>