force-app/main/default/objects/Product2/fields/Reporting_Segment__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Segment__c</fullName>
    <label>Reporting Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Company Wide</fullName>
            </value>
            <value>
                <fullName>Field Services</fullName>
            </value>
            <value>
                <fullName>Industrial Services</fullName>
            </value>
            <value>
                <fullName>Lodging Services</fullName>
            </value>
            <value>
                <fullName>Oil and Gas Field Services</fullName>
            </value>
			<value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Safety-Kleen</fullName>
            </value>
            <value>
                <fullName>Tech Services</fullName>
            </value>
            <value>
                <fullName>Bulk Products and Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>