force-app/main/default/objects/Product2/listViews/All_Safety_Kleen_Products.listView-meta.xml
<ListView>
    <fullName>All_Safety_Kleen_Products</fullName>
    <columns>Primary_Business__c</columns>
    <columns>Reporting_Segment__c</columns>
    <columns>Operating_Segment__c</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>LOB_Code__c</columns>
    <columns>Create_Single_Revenue_Schedule__c</columns>
    <columns>Exclude_from_Base_Budgets__c</columns>
    <columns>Exclude_KAM_Budgets__c</columns>
    <columns>PRODUCT2.REV_SCHEDULE_TYPE</columns>
    <columns>PRODUCT2.REV_SCHEDULE_INTERVAL</columns>
    <columns>PRODUCT2.REV_SCHEDULE_NUMBER</columns>
    <columns>ProductID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Reporting_Segment__c</field>
        <operation>equals</operation>
        <value>Safety-Kleen</value>
    </filters>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Safety-Kleen Products</label>
    <language>en_US</language>
</ListView>