force-app/main/default/objects/Product2/listViews/AllProducts.listView-meta.xml
<ListView>
    <fullName>AllProducts</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>LOB_Code__c</columns>
    <columns>Reporting_Segment__c</columns>
    <columns>Operating_Segment__c</columns>
    <columns>Primary_Business__c</columns>
    <columns>Business_Unit__c</columns>
    <columns>ProductID__c</columns>
    <columns>isTPM__c</columns>
    <columns>Product_Hierarchy_Number__c</columns>
    <columns>Exclude_from_Base_Budgets__c</columns>
    <columns>PRODUCT2.REV_SCHEDULE_TYPE</columns>
    <columns>PRODUCT2.REV_SCHEDULE_INTERVAL</columns>
    <columns>PRODUCT2.REV_SCHEDULE_NUMBER</columns>
    <columns>PRODUCT2.REV_SCHEDULE_ENABLED</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <filterScope>Everything</filterScope>
    <label>All Products</label>
    <language>en_US</language>
</ListView>