force-app/main/default/objects/Product2/listViews/Excluded_LOBs.listView-meta.xml
<ListView>
    <fullName>Excluded_LOBs</fullName>
    <columns>Primary_Business__c</columns>
    <columns>Reporting_Segment__c</columns>
    <columns>Operating_Segment__c</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>LOB_Code__c</columns>
    <columns>Exclude_from_Base_Budgets__c</columns>
    <columns>Exclude_KAM_Budgets__c</columns>
    <columns>PRODUCT2.REV_SCHEDULE_TYPE</columns>
    <columns>PRODUCT2.REV_SCHEDULE_INTERVAL</columns>
    <columns>PRODUCT2.REV_SCHEDULE_NUMBER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Exclude_from_Base_Budgets__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Excluded LOBs</label>
    <language>en_US</language>
</ListView>